Fix NavBar links visability for mobile

--- a/src/componets/NavBar/index.scss
+++ b/src/componets/NavBar/index.scss
@@ -2,9 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 
   a {
     padding: 4px;
     margin: 8px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
